package question;

import question.BinaryTree;

public class BinaryHeap extends BinaryTree {

    public BinaryHeap() {
        System.out.printf("%n/* ------------------------------- BinaryHeap ------------------------------- */%n%n");
    }
    
    /** 
     * @return Object
     */
    @Override
    public Object getData() {
        return super.getData();
    }

    
    /** 
     * @return BinaryTree
     */
    @Override
    public BinaryTree getLeftSubtree() {
        return super.getLeftSubtree();
    }

    
    /** 
     * @return BinaryTree
     */
    @Override
    public BinaryTree getRightSubtree() {
        return super.getRightSubtree();
    }

    
    /** 
     * @return boolean
     */
    @Override
    public boolean isLeaf() {
        return super.isLeaf();
    }

    
    /** 
     * @return String
     */
    @Override
    public String toString() {
        return super.toString();
    }

    
    /** 
     * @return Object
     * @throws CloneNotSupportedException
     */
    @Override
    protected Object clone() throws CloneNotSupportedException {
        return super.clone();
    }

    
    /** 
     * @param obj
     * @return boolean
     */
    @Override
    public boolean equals(Object obj) {
        return super.equals(obj);
    }

    
    /** 
     * @throws Throwable
     */
    @Override
    protected void finalize() throws Throwable {
        super.finalize();
    }

    
    /** 
     * @return int
     */
    @Override
    public int hashCode() {
        return super.hashCode();
    }

    // TODO: increment  the  key  value  of  an  element  
    // TODO: merge  two  heap  structure

}
