@startuml

title __HW5's Class Diagram__\n

  namespace question {
    class question.BinaryHeap {
    }
  }
  

  namespace question {
    class question.BinarySearchTree {
    }
  }
  

  namespace question {
    class question.BinaryTree {
    }
  }
  

  namespace question {
    class question.Main {
    }
  }
  

  namespace question {
    interface question.SearchTree {
    }
  }
  

  question.BinaryHeap -up-|> question.BinaryTree
  question.BinarySearchTree .up.|> question.SearchTree
  question.BinarySearchTree -up-|> question.BinaryTree
  question.BinaryTree .up.|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
